WTR crashes after running a test when NetworkProcess enabled https://bugs.webkit.org/show_bug.cgi?id=138500

Reviewed by Alexey Proskuryakov.

WebNotificationProvider destructor is calling
WKNotificationManagerSetProvider, but m_notificationManager is
null because removeNotificationManager was already called.

* WebKitTestRunner/WebNotificationProvider.cpp:
(WTR::WebNotificationProvider::~WebNotificationProvider): Check
m_notificationManager is not null before calling WKNotificationManagerSetProvider.

Canonical link: https://commits.webkit.org/156354@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@175774 268f45cc-cd09-0410-ab3c-d52691b4dbfc